// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' homa > with specific block > unbond withdraw works > events 1`] = `
[
  {
    "data": {
      "newEraIndex": "(rounded 1000)",
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`'acala' homa > with specific block > unbond withdraw works > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 2200000000000)",
      "stash": "15sr8Dvq3AT3Z2Z1y8FnQ4VipekAHhmQnrkgzegUr1tNgbcn",
    },
    "method": "Withdrawn",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(rounded 520000)",
          "refTime": "(rounded 25000000000)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'acala' homa > with specific block > unbond withdraw works > ump 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": 10000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
        ],
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": 10000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x1a010000070305000000",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 10000000000,
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x1a01000005030070617261d00700000000000000000000000000000000000000000000000000000b8f589fcc0302",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 10000000000,
        },
      },
      {
        "refundSurplus": null,
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "parachain": 2000,
              },
            },
            "parents": 0,
          },
          "maxAssets": 1,
        },
      },
    ],
  },
]
`;

exports[`'karura' homa > with specific block > unbond withdraw works > events 1`] = `
[
  {
    "data": {
      "newEraIndex": "(rounded 5000)",
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`'karura' homa > with specific block > unbond withdraw works > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 15000000000000000)",
      "stash": "FDVu3RdH5WsE2yTdXN3QMq6v1XVDK8GKjhq5oFjXe8wZYpL",
    },
    "method": "Withdrawn",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": "(rounded 39000000000)",
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'karura' homa > with specific block > unbond withdraw works > ump 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": 20000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
        ],
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": 20000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x18010100060305000000",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 20000000000,
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x1801010004030070617261d00700000000000000000000000000000000000000000000000000000fcb6c13cb5edd34",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 20000000000,
        },
      },
      {
        "refundSurplus": null,
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "parachain": 2000,
              },
            },
            "parents": 0,
          },
          "maxAssets": 1,
        },
      },
    ],
  },
]
`;
